@@ -1,10 +1,9 @@
-/* $Id: TodayFixes,v 1.67 2004/05/27 18:50:00 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.68 2004/05/28 04:15:31 sisoft Exp $ */
 ---
-fix end 'qico -c' calls.
-move modem functions to modem.c, calls to call.c.
+add mistaked modem.c.
 .
 previous:
 ---
-last fix for --with-config.
-other small changes.
+fix end 'qico -c' calls.
+move modem functions to modem.c, calls to call.c.
 .
